--- a/naoFazSentido/naoFazSentido.csproj
+++ b/naoFazSentido/naoFazSentido.csproj
@@ -84,6 +84,18 @@
     <Compile Include="Apresentação\Form6.Designer.cs">
       <DependentUpon>Form6.cs</DependentUpon>
     </Compile>
+    <Compile Include="Apresentação\Form7.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apresentação\Form7.Designer.cs">
+      <DependentUpon>Form7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Apresentação\Form8.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apresentação\Form8.Designer.cs">
+      <DependentUpon>Form8.cs</DependentUpon>
+    </Compile>
     <Compile Include="Apresentação\provisoria.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +105,7 @@
     <Compile Include="Banco\AcessoBancoDados.cs" />
     <Compile Include="Negocio\combustivelNegocio.cs" />
     <Compile Include="Negocio\Negocios.cs" />
+    <Compile Include="ObjetoDeTransferencia\DTOAbastecimento.cs" />
     <Compile Include="ObjetoDeTransferencia\DTOCarro.cs" />
     <Compile Include="ObjetoDeTransferencia\DTOMotorista.cs" />
     <Compile Include="ObjetoDeTransferencia\DTORevisoa.cs" />
@@ -115,6 +128,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Apresentação\Form6.resx">
       <DependentUpon>Form6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apresentação\Form7.resx">
+      <DependentUpon>Form7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apresentação\Form8.resx">
+      <DependentUpon>Form8.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Apresentação\provisoria.resx">
       <DependentUpon>provisoria.cs</DependentUpon>
